# iterm2-api

./: .gitignore  AGENTS.md  Cargo.toml  PROGRESS.md  README.md  build.rs  dylint.toml  justfile
.cargo/: config.toml
api-parser/: Cargo.toml
api-parser/src/: main.rs
download-docs/: Cargo.toml
download-docs/src/: main.rs
examples/: advanced_tabs.rs  basic_connection.rs
python-parser/: Cargo.toml
python-parser/src/: main.rs
src/: auth.rs  connection.rs  error.rs  lib.rs
