[package]
name = "python-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-parser = { version = "0.1", features = ["python"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
